examples/test/testpolicy16767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16767
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key22: value21
      key42: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value46
      podSelector:
        matchLabels:
          key45: value21
          key19: value2
          key34: value44
